# ani-senpai

./: ARCHITECTURE.MD  Cargo.toml  README.md
src/: anilist.rs  app.rs  gemini.rs  main.rs  ui.rs
