[package]
name = "ani-senpai"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

